example/kpt/linkerd/manifests/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linkerd-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:8084;
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: web-ingress-auth
#    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  tls:
  - hosts:
    - $(LINKERD_DASHBOARD_HOST)
    secretName: linkerd-web-tls
  rules:
  - host: $(LINKERD_DASHBOARD_HOST)
    http:
      paths:
      - backend:
          serviceName: linkerd-web
          servicePort: 8084
